app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: crypto
  name: crypto
spec:
  finalizers:
  - kubernetes
