app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: django-app
  namespace: crypto
spec:
  serviceName: "django-app"
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-container
          image: registry.hmdkh.ir/crypto:1.0.69
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: my-registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
