app/django-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"django-app-service","namespace":"crypto"},"spec":{"ports":[{"nodePort":30080,"port":80,"protocol":"TCP","targetPort":8000}],"selector":{"app":"django-app"},"type":"NodePort"}}
  name: django-app-service
  namespace: crypto
spec:
  clusterIP: 10.109.229.56
  clusterIPs:
  - 10.109.229.56
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: django-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
